[metadata]
name = mfpy
version = attr: mfpy.__version__
url = https://github.com/puhitaku/mfpy
author = Takumi Sueda
author_email = puhitaku@gmail.com
license_file = LICENSE
description = MoneyForward クラウド勤怠といい感じに通信していい感じに打刻するやつ
long_description = file: README.md
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6
install_requires =
    click
    requests
    beautifulsoup4
    urlpath
